--- a/maua22_mean_1-main/src/app/clientes/cliente-lista/cliente-lista.component.html
+++ b/maua22_mean_1-main/src/app/clientes/cliente-lista/cliente-lista.component.html
@@ -5,9 +5,9 @@
     <hr>
     <p>Email: {{cliente.email}}</p>
     <mat-action-row>
-      <button mat-button color="primary">EDITAR</button>
+      <button mat-button color="primary" [routerLink]="['/editar', cliente.id]">EDITAR</button>
       <button mat-button color="warn" (click)="onDelete(cliente.id)">REMOVER</button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<p class="mat-body-1" style="text-align: center;" *ngIf="clientes.length<=0">Nenhum cliente cadastrado</p>
+<p class="mat-body-1" style="text-align: center;" *ngIf="clientes.length<=0">Nenhum cliente cadastrado</p> 
